Push for dinner

--- a/HaarlemFestival/Views/Dinner/Index.cshtml
+++ b/HaarlemFestival/Views/Dinner/Index.cshtml
@@ -7,6 +7,8 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
+<!--Mn text is pleb moet nieuwe text is man -->
+
 @section AddToScripts{
     <script src="@Url.Content("~/Scripts/FilterOnCuisine.js")"></script>
 }
