jazz pagina aangepast

--- a/HaarlemFestival/Content/Site.css
+++ b/HaarlemFestival/Content/Site.css
@@ -981,6 +981,19 @@ img.HistoricRouteInfo9 {
 }
 
 /*-------------------------------JAZZ---------------------------------*/
+.jazz_page_inhoud{
+    margin-top : 15px;
+}
+
+.jazz_page_activiteit_section{
+    margin-bottom : 15px;
+    height : 1000px;
+}
+
+.jazz_page_info_box {
+    margin-top: 40px;
+}
+
 .jazz_page_info_hp {
     width: 100%;
 }
@@ -1023,7 +1036,7 @@ img.HistoricRouteInfo9 {
     border-bottom-style: inset;
     border-top-color: black;
     border-bottom-color: black;
-    margin-top: 3%;
+    margin-top: 2%;
     padding: 15px 0;
 }
 
@@ -1032,7 +1045,7 @@ img.HistoricRouteInfo9 {
     margin: 0;
     margin-right: 6%;
     margin-left: 5%;
-    padding: 10px 0;
+    padding: 3px 0;
 }
 
 .jazz_page_program_thursday {
@@ -1053,7 +1066,7 @@ img.HistoricRouteInfo9 {
 
 .jazz_page_program_passpartout {
     float: right;
-    margin-top: 10px;
+    margin-right : 3%;
 }
 
 .jazz_page_imgsection {
