--- a/HaarlemFestival/Views/Jazz/Index.cshtml
+++ b/HaarlemFestival/Views/Jazz/Index.cshtml
@@ -28,10 +28,10 @@
     <section class="jazz_page_program_days">
         <h3 class="jazz_page_program_days_header">@Model.Page.PageDescriptions[3].Title</h3>
 
-        @Html.ActionLink("Thursday", "Index", "Jazz", new { id = 1}, new { @class = "btn btn-default jazz_page_program_thursday" })
-        @Html.ActionLink("Friday", "Index", "Jazz", new { id = 2 }, new { @class = "btn btn-default jazz_page_program_friday" })
-        @Html.ActionLink("Saturday", "Index", "Jazz", new { id = 3 }, new { @class = "btn btn-default jazz_page_program_saturday" })
-        @Html.ActionLink("Sunday", "Index", "Jazz", new { id = 4 }, new { @class = "btn btn-default jazz_page_program_sunday" })
+        @Html.ActionLink(Model.Page.PageDescriptions[4].Title, "Index", "Jazz", new { id = 1}, new { @class = "btn btn-default jazz_page_program_thursday" })
+        @Html.ActionLink(Model.Page.PageDescriptions[5].Title, "Index", "Jazz", new { id = 2 }, new { @class = "btn btn-default jazz_page_program_friday" })
+        @Html.ActionLink(Model.Page.PageDescriptions[6].Title, "Index", "Jazz", new { id = 3 }, new { @class = "btn btn-default jazz_page_program_saturday" })
+        @Html.ActionLink(Model.Page.PageDescriptions[7].Title, "Index", "Jazz", new { id = 4 }, new { @class = "btn btn-default jazz_page_program_sunday" })
 
         <button name="passpartout" type="submit" class="btn btn-default jazz_page_program_passpartout" tabindex="5">@Model.Page.PageDescriptions[8].Title</button>
     </section>
@@ -39,6 +39,32 @@
     <section class="jazz_page_inhoud">
         @for (int i = 0; i < Model.Activities.Count; i++)
         {
+            <!-- The Modal -->
+            <section id="myModal_@Model.Activities[i].Id" class="modal">
+            <!-- Modal content -->
+                    <section class="modal-content">
+                        <span class="close">&times;</span>
+                        <p class="modaltitle">1</p>
+                        <p class="modallocation">2</p>
+                        <p class="modalhall">3</p>
+                        <p class="modalprice">4</p>
+                        <p class="modaltime">5</p>
+                        <p class="modaldatum">6</p>
+                        <label>Aantal</label>
+                        <input id="textBox_@Model.Activities[i].Id" type="text" />
+                        <a href="@Url.Action("OrderJazz", "Jazz", new { id = Model.Activities[i].Id, aantal = "xxxx"})" id="link">Order Ticket</a>
+
+                        @*@Html.ActionLink("Order Ticket", "OrderJazz", "Jazz", new { id = Model.Activities[i].Id, aantal = 5}, null)*@
+                        @*@using (Html.BeginForm("OrderJazz", "Jazz", FormMethod.Post))
+                        {
+                            @Html.EditorFor(m => m.OrderTicket.Amount)
+                            @Html.HiddenFor(m => m.Activities[i].Id)
+
+                            <input type="submit" value="Submit" />
+                        }*@
+                    </section>
+            </section>
+
             <section class="col-md-4 jazz_page_activiteit_section">
                 <section>
                     <img src=@Model.Activities[i].ActivityDescriptions[0].ImageUrl width="280" height="280" alt="Jazz @Model.Activities[i].ActivityDescriptions[0].Title" />
@@ -47,52 +73,40 @@
                     <section>
                         <section>
                             <h3 id="jazz_activity_title_@Model.Activities[i].Id" class="jazz_activiteit_title">@Model.Activities[i].ActivityDescriptions[0].Title</h3>
-                            <p>@Model.Activities[i].ActivityDescriptions[0].DescriptionText</p>
+                            @*<p>@Model.Activities[i].ActivityDescriptions[0].DescriptionText</p>*@
                         </section>
                         <hr class="jazz_page_actinfosection_line" />
                         <section>
-                            <p id="jazz_activity_location_@Model.Activities[i].Id" class="jazz_activiteit_location">@Model.Page.PageDescriptions[9].Title @Model.Activities[i].Location.Name</p>
-                            <p id="jazz_activity_hall_@Model.Activities[i].Id" class="jazz_activiteit_hall">@Model.Page.PageDescriptions[10].Title @Model.Activities[i].Timeslots[0].Hall</p>
-                            <p id="jazz_activity_price_@Model.Activities[i].Id" class="jazz_activiteit_price">@Model.Page.PageDescriptions[11].Title €@Model.Activities[i].Timeslots[0].Tickets[0].Price</p>
-                            <p id="jazz_activity_time_@Model.Activities[i].Id" class="jazz_activiteit_time">@Model.Page.PageDescriptions[12].Title @Model.Activities[i].Timeslots[0].StartTime.ToString("HH:mm") - @Model.Activities[i].Timeslots[0].EndTime.ToString("HH:mm")</p>
-                            @if (Model.Activities[i].Timeslots[0].StartTime.ToString("dd/MM/yyyy") != "29-07-2018")
-                            {
-                                <button id=@Model.Activities[i].Id class="jazz_page_buybtn" type="button">@Model.Page.PageDescriptions[13].Title</button>
-                            }
-
+                            <section class="col-md-6">
+                                <p id="jazz_activity_location_@Model.Activities[i].Id" class="jazz_activiteit_location">@Model.Page.PageDescriptions[9].Title @Model.Activities[i].Location.Name</p>
+                                
+                                @if (Model.Activities[i].Timeslots[0].StartTime.ToString("dd/MM/yyyy") != "29-07-2018")
+                                {
+                                    <p id="jazz_activity_hall_@Model.Activities[i].Id" class="jazz_activiteit_hall">@Model.Page.PageDescriptions[10].Title @Model.Activities[i].Timeslots[0].Hall</p>
+                                    <p id="jazz_activity_price_@Model.Activities[i].Id" class="jazz_activiteit_price">@Model.Page.PageDescriptions[11].Title €@Model.Activities[i].Timeslots[0].Tickets[0].Price</p>
+                                }
+                                
+                                <p id="jazz_activity_time_@Model.Activities[i].Id" class="jazz_activiteit_time">@Model.Page.PageDescriptions[12].Title @Model.Activities[i].Timeslots[0].StartTime.ToString("HH:mm") - @Model.Activities[i].Timeslots[0].EndTime.ToString("HH:mm")</p>
+                            </section>
+                            <section class="col-md-6">
+                                @if (Model.Activities[i].Timeslots[0].StartTime.ToString("dd/MM/yyyy") != "29-07-2018")
+                                {
+                                    <button class="jazz_page_buybtn" type="button">@Model.Page.PageDescriptions[14].Title</button>
+                                    <br />
+                                    <button id=@Model.Activities[i].Id class="jazz_page_buybtn" type="button">@Model.Page.PageDescriptions[13].Title</button>
+                                }
+                            </section>
                         </section>
                     </section>
                 </section>
 
             </section>
+
+            
         }
     </section>
-    
 
-    <!-- The Modal -->
-    <section id="myModal" class="modal">
 
-        <!-- Modal content -->
-        <section class="modal-content">
-            <span class="close">&times;</span>
-            <p class="modaltitle">1</p>
-            <p class="modallocation">2</p>
-            <p class="modalhall">3</p>
-            <p class="modalprice">4</p>
-            <p class="modaltime">5</p>
-            <p class="modaldatum">6</p>
-            <label>Aantal</label>
-
-            @using (Html.BeginForm("OrderJazz", "Jazz", FormMethod.Post))
-            {
-                @Html.HiddenFor(m => m.OrderTicket.Ticket_TimeSlot_Activity_Id, new { id = "activityID"})
-                @Html.EditorFor(m => m.OrderTicket.Amount)
-                <input type="submit" value="Order" />
-            }
-
-        </section>
-
-    </section>
 
 </section>
 
