Verder gewerkt aan historic order

--- a/HaarlemFestival/Views/Historic/Index.cshtml
+++ b/HaarlemFestival/Views/Historic/Index.cshtml
@@ -163,7 +163,7 @@
             </datalist>
 
             <p>Submit order:</p>
-            <button>Submit</button>
+            <button id="HistoricSubmit">Submit</button>
             
         </form>
     </div>
