--- a/HaarlemFestival/Content/Site.css
+++ b/HaarlemFestival/Content/Site.css
@@ -1153,6 +1153,45 @@ img.HistoricRouteInfo9 {
     font-weight: bold;
 }
 
+.close:hover, .close:focus {
+        color: #000;
+        text-decoration: none;
+        cursor: pointer;
+
+}
+
+/* The Modal validation (background) */
+.validationOrderModalClass {
+    display: none; /* Hidden by default */
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Sit on top */
+    padding-top: 100px; /* Location of the box */
+    left: 0;
+    top: 0;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    overflow: auto; /* Enable scroll if needed */
+    background-color: rgb(0,0,0); /* Fallback color */
+    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+}
+
+/* Modal Content */
+.modal-content {
+    background-color: #fefefe;
+    margin: auto;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 80%;
+}
+
+/* The Close Button */
+.close {
+    color: #aaaaaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+}
+
     .close:hover,
     .close:focus {
         color: #000;
@@ -1160,8 +1199,7 @@ img.HistoricRouteInfo9 {
         cursor: pointer;
     }
 
-#article-editor {
-    width: 600px;
-    margin-left: -300px;
-    margin-right: -300px;
-}
+
+
+
+
