--- a/HaarlemFestival/Content/Site.css
+++ b/HaarlemFestival/Content/Site.css
@@ -525,7 +525,22 @@ footer {
         text-decoration: underline;
     }
 
+.btn_order {
+    left: 37%;
+    margin: 0;
+    background-color: #1DBF3B;
+    border-color: #1DBF3B;
+    color: white;
+    font-size: 12px;
+    padding: 3px 14px;
+    border-radius: 4px;
+    border-style: solid;
+    width: 32%;
+}
 
+    .btn_order:hover {
+        text-decoration: underline;
+    }
 
 
 /*-------------------------------------------Contact page---------------------------------------------*/
