--- a/HaarlemFestival/Views/Historic/Index.cshtml
+++ b/HaarlemFestival/Views/Historic/Index.cshtml
@@ -131,9 +131,11 @@
 
 </section>
 
+@using (Html.BeginForm())
+{
+
 <!-- The Modal -->
 <div id="myModalHistoric" class="modalHistoric">
-
     <!-- Modal content -->
     <div class="modal-contentHistoric">
         <span class="closeHistoric">&times;</span>
@@ -143,6 +145,7 @@
             <input id="HistoricDayOption1" type="radio" name="day" value="1"/>  <label for="DayChoice1">Thursday 26/07/2018</label>
             <input id="HistoricDayOption2" type="radio" name="day" value="2"/>  <label for="DayChoice2">Friday 27/07/2018</label>
             <input id="HistoricDayOption3" type="radio" name="day" value="3"/>  <label for="DayChoice3">Saturday 28/07/2018</label>
+            @Html.HiddenFor(model => model, htmlAttributes: new { @class = "control-label col-md-2" })
             <p>Choose Time</p>
             <input id="HistoricTimeOption1" type="radio" name="time" value="1"/> <label for="TimeChoice1">10:00-13:00</label>
             <input id="HistoricTimeOption2" type="radio" name="time" value="2"/> <label for="TimeChoice2">13:00-16:00</label>
@@ -169,3 +172,4 @@
     </div>
 
 </div>
+}
