--- a/HaarlemFestival/Views/Dinner/Index.cshtml
+++ b/HaarlemFestival/Views/Dinner/Index.cshtml
@@ -9,6 +9,10 @@
 
 <!--Mn text is pleb moet nieuwe text is man -->
 
+@section AddToHead{
+    <link href="@Url.Content("~/Content/Dinner.css")" rel="stylesheet" type="text/css" />
+}
+
 @section AddToScripts{
     <script src="@Url.Content("~/Scripts/FilterOnCuisine.js")"></script>
 }
