--- a/HaarlemFestival/Views/Shared/_LayoutLoggedIn.cshtml
+++ b/HaarlemFestival/Views/Shared/_LayoutLoggedIn.cshtml
@@ -16,6 +16,9 @@
         @RenderSection("AddToHead", required: false)
     }
 </head>
+    @{
+    var ticketCookie = Request.Cookies["userCookie"];
+    }
 <body>
     <header class="navbar navbar-inverse navbar-fixed-top">
         <nav class="container">
@@ -28,8 +31,6 @@
                 <a class="navbar-brand" rel="home" href="#" title="Haarlem Festival">
                     <img style="max-width: 130px; margin-top: -12px;"
                          src="/img/Header/HF_logo_header.png">
-                    @* Swap href to actionlink???? *@
-
                 </a>
             </nav>
 
@@ -48,6 +49,14 @@
                         <a class="navbar-right" rel="home" href="#" title="Haarlem Festival">
                             <img style="width: 33px; height: 28px; margin-top: -10px; margin-bottom: -10px;"
                                  src="/img/Header/Shopping_cart_header.png">
+                            @if (ticketCookie != null)
+                            {
+                            <label> @ticketCookie.Value.ToString()</label>
+                            }
+                            else
+                            {
+                            <label>0</label>
+                            }
                         </a>
                     </li>
                     <li><a>@User.Identity.Name</a></li>
