--- a/HaarlemFestival/Views/CheckOut/checkout1.cshtml
+++ b/HaarlemFestival/Views/CheckOut/checkout1.cshtml
@@ -1,4 +1,5 @@
-﻿@model HaarlemFestival.Model.LoginModel
+﻿@model HaarlemFestival.Model.PagePlusOrderPlusLogin
+
 @{
     ViewBag.Title = "CheckOut1";
 }
