--- a/HaarlemFestival/Views/Jazz/Index.cshtml
+++ b/HaarlemFestival/Views/Jazz/Index.cshtml
@@ -52,7 +52,7 @@
                     <p class="modaltime"></p>
                     <label>@Model.Page.PageDescriptions[15].Title</label>
                     <input id="textBox_@Model.Activities[i].Id" type="text" required />
-                    <a href="@Url.Action("OrderJazz", "CheckOut", new { id = Model.Activities[i].Id, aantal = "xxxx"})" id="orderlink">@Model.Page.PageDescriptions[15].DescriptionText</a>
+                    <a href="@Url.Action("OrderJazz", "CheckOut", new { id = Model.Activities[i].Id, aantal = "xxxx"})" id="orderlink_@Model.Activities[i].Id">@Model.Page.PageDescriptions[15].DescriptionText</a>
                 </section>
             </section>
 
@@ -161,7 +161,7 @@
                 <h3>@Model.Page.PageDescriptions[19].Title</h3>
                 <label>@Model.Page.PageDescriptions[15].Title</label>
                 <input id="textboxaantal4" type="text" required>
-                <a class="btn btn-default" href="@Url.Action("OrderJazz", "CheckOut", new { id = 57, aantal = "xxxx"})" id="passpartoutorderlink4"></a>
+                <a class="btn btn-default" href="@Url.Action("OrderJazz", "CheckOut", new { id = 57, aantal = "xxxx"})" id="passpartoutorderlink4">@Model.Page.PageDescriptions[20].Title</a>
             </section>
         </section>
 
